--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
+  font-family: "Pacifico";
+  src: url("../fonts/Pacifico-Regular.ttf");
   font-weight: normal;
   font-style: normal;
 }
