--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,36 @@
 @import "typography";
 
 body {
+  font-family: "Pacifico", sans-serif;
   background: $c-gray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../images/background.jpg);
+  background-size: cover;
+}
+
+.article {
+  font-family: "Pacifico", sans-serif;
+  text-shadow: 3px 5px 6px rgba(59, 55, 55, 0.3), -6px -7px 6px #646164;
+  font-size: 40px;
+}
+
+.game {
+  width: 300px;
+  height: 300px;
+  background-image: url(../images/Xo_game.svg);
+  background-size: cover;
+}
+
+.block {
+  width: 100px;
+  height: 100px;
+  float: left;
+  box-sizing: border-box;
+  line-height: 100px;
+  text-align: center;
+  font-size: 40px;
+  text-transform: uppercase;
+  text-shadow: 3px 5px 6px rgba(59, 55, 55, 0.3), -6px -7px 6px #646164;
 }
