--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,3 +36,37 @@ body {
   text-transform: uppercase;
   text-shadow: 3px 5px 6px rgba(59, 55, 55, 0.3), -6px -7px 6px #646164;
 }
+
+.alert {
+  top: 42vh;
+  border-radius: 20px;
+  width: 200px;
+  height: 150px;
+  position: absolute;
+  background-color: black;
+  display: none;
+  text-align: center;
+}
+
+.winnerX,
+.winnerXO,
+.winnerO {
+  font-size: 20px;
+  color: white;
+  display: none;
+}
+
+.button {
+  position: relative;
+  left: 25%;
+  border-radius: 10px;
+  width: 100px;
+  height: 30px;
+  background-color: white;
+  transition: 0.3s;
+  &:hover {
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+  }
+}
