--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,7 @@ body {
   text-shadow: 3px 5px 6px rgba(59, 55, 55, 0.3), -6px -7px 6px #646164; }
 
 .alert {
-  top: 42vh;
+  top: 200px;
   border-radius: 20px;
   width: 200px;
   height: 150px;
